# AMLproyect

./: baselinemodels.py  eda.py  main.py  pyproject.toml
Assignment1/: README.md  baselinemodels.py  data_partition.py  eda.py  final_evaluation.py  imbalance.py  imputation.py  induce_missingness.py  main.py  multi_class.py  multi_class2.py  pyproject.toml
Assignment1/datasets/: Digital_Payment_Fraud_Detection_Dataset_imputed.csv  Digital_Payment_Fraud_Detection_Dataset_missing.csv  Digital_Payment_Fraud_Detection_Dataset_multiclass.csv  test.csv  train.csv  train_balanced_adasyn.csv  val.csv
Assignment2/: adv_stat_models.py  analysis_grouped.py  baseline_models.py  chronos_model.py  data_agrupation.py  data_partition.py  dl_foundations_models.py  eda.py  lts_model.py  main.py  pyproject.toml
Assignment2/datasets/: lstm_results.csv  retail_store_grouped.csv  retail_store_grouped_by_category.csv  retail_store_grouped_by_product.csv  retail_store_grouped_by_region.csv  retail_store_grouped_by_store.csv  test.csv  test_Store.csv  test_category.csv  test_product.csv  test_region.csv  train.csv  train_Store.csv  train_category.csv  train_product.csv  train_region.csv  val.csv  val_Store.csv  val_category.csv  val_product.csv  val_region.csv
Assignment2/models/: lstm_P0001.pth  lstm_P0002.pth  lstm_P0003.pth  lstm_P0004.pth  lstm_P0005.pth
Assignment2/results/: adv_stat_results.csv  baseline_results.csv  chronos_results.csv  lstm_results.csv
